<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_medium"
        tools:context=".ui.fragments.CreateDebtFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="@string/create_new_debt_header" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@android:drawable/divider_horizontal_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_medium">

            <ImageButton
                android:id="@+id/cancelBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/dismiss_desc"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close"
                android:tint="@color/primaryTextColor" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleDirectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                app:singleSelection="true">

                <Button
                    android:id="@+id/iGetBtn"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/i_get"
                    app:icon="@drawable/ic_tab_i_get" />

                <Button
                    android:id="@+id/iOweBtn"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/i_owe"
                    app:icon="@drawable/ic_tab_i_owe" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleTypeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                app:singleSelection="true">

                <Button
                    android:id="@+id/moneyBtn"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/type_money_desc"
                    app:icon="@drawable/ic_money" />

                <Button
                    android:id="@+id/objectsBtn"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/type_objects_desc"
                    app:icon="@drawable/ic_objects"

                    />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <ImageButton
                android:id="@+id/confirmBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/save_debt_desc"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_done"
                android:tint="@color/primaryTextColor" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:hint="@string/person_name"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownAnchor="@id/cancelBtn"
                android:dropDownWidth="match_parent"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reasonTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:hint="@string/reason_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage|textCapSentences"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountObjectsTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            app:errorEnabled="true"
            tools:hint="Amount (€) / Objects">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</ScrollView>